fixed dispaly issues for nav bar when viewing on mobile

--- a/mycss/style.css
+++ b/mycss/style.css
@@ -129,7 +129,8 @@ footer {
 /* Responsive design */
 @media screen and (max-width: 768px) {
   nav ul {
-    flex-direction: column;
+    display: inline;
+    /* flex-direction: column; */
     gap: 8px;
   }
 
